add custom stylesheet

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="styles/glDatePicker.flatwhite.css" rel="stylesheet" type="text/css">
+    <link href="styles/glDatePicker.custom.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <input type="text" id="mydate" gldp-id="mydate" />
@@ -16,7 +16,7 @@
         {
             $('input').glDatePicker({
               showAlways: true,
-              cssName: 'flatwhite'
+              cssName: 'custom'
             });
             console.log('everything is working');
         });
